{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 47,
  "lineage": "98e2ea6b-4d0c-7877-1478-ec894884b3d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048f4445314bcaa09",
            "arn": "arn:aws:ec2:ap-south-1:633967387032:instance/i-09bed40212fc40f5c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bed40212fc40f5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MASTER",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ab03141cc495a67",
            "private_dns": "ip-10-0-1-120.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.120",
            "public_ip": "3.109.4.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4e113382e1ab8aa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0091817e8fd00d8ad",
            "tags": {
              "Name": "Master"
            },
            "tags_all": {
              "Name": "Master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a00faeb34ef23399"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2-security-group",
            "aws_subnet.public_subnet",
            "aws_vpc.PRODUCTION"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "productionigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633967387032:internet-gateway/igw-062068bad8d303c78",
            "id": "igw-062068bad8d303c78",
            "owner_id": "633967387032",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-00ffbf587109e7625"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.PRODUCTION"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633967387032:route-table/rtb-0c771065e9c7345eb",
            "id": "rtb-0c771065e9c7345eb",
            "owner_id": "633967387032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062068bad8d303c78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ffbf587109e7625"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.productionigw",
            "aws_vpc.PRODUCTION"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091787b1993a75834",
            "route_table_id": "rtb-0c771065e9c7345eb",
            "subnet_id": "subnet-0091817e8fd00d8ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.productionigw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.PRODUCTION"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633967387032:security-group/sg-0a00faeb34ef23399",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a00faeb34ef23399",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "633967387032",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ffbf587109e7625"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.PRODUCTION"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633967387032:subnet/subnet-057c50b2a56cf9cee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057c50b2a56cf9cee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633967387032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-00ffbf587109e7625"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.PRODUCTION"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633967387032:subnet/subnet-0091817e8fd00d8ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0091817e8fd00d8ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633967387032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-00ffbf587109e7625"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.PRODUCTION"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PRODUCTION",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:633967387032:vpc/vpc-00ffbf587109e7625",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01686ed849305b7eb",
            "default_route_table_id": "rtb-057e82dcf4f38d857",
            "default_security_group_id": "sg-0554f430d32554a42",
            "dhcp_options_id": "dopt-056a1f06485728033",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ffbf587109e7625",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057e82dcf4f38d857",
            "owner_id": "633967387032",
            "tags": {
              "Name": "PRODUCTION"
            },
            "tags_all": {
              "Name": "PRODUCTION"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}